Remove weird scrollbar on ide and fix styling of bottom bar icons

--- a/client/ide/styl/ide.styl
+++ b/client/ide/styl/ide.styl
@@ -409,24 +409,28 @@ body.ide.dark
           width         50px
 
     .share
-      bg                color #24B444
-      color             white
-      padding           3px 12px
+      color             #b9b9b9
+      padding           3px 8px
       height            24px
       text-transform    uppercase
+      font-weight       600
       margin-top        8px
       rounded           3px
       font-size         12px
       line-height       18px
+      margin-right      6px
       borderBox()
       noTextDeco()
+
       &:hover
-        bg              color #656565
+        color           #fff
+        bg              color #24b444
 
     .icon
-      size              auto 100%
-      padding           0 5px
+      size              auto auto
+      padding           0
       margin-top        3px
+      margin-right      12px
       pointer()
       fr()
 
